(PE-9506) cannot install 3.8 on ubuntu 14.04 ec2 without workaround, improved